descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2009-04-XX  Release 7.14.6                                     ---
----------------------------------------------------------------------

* fixed small memory leak in gqa - Bob Parker
* implemented rtwizard perspective rendering support - Sean Morrison
* fixed rtwizard perspective and occlusion dialog bugs - Sean Morrison
* mged 'clone' command utilizes a new naming convention - Keith Bowman
* fixed mged bug mirroring rcc primitives - Keith Bowman
* modified rpp vertex ordering to match arb8 vertices - Keith Bowman
* fixed mged 'qorot' command rotation about point bug - Keith Bowman


----------------------------------------------------------------------
--- 2009-03-06  Release 7.14.4                                     ---
----------------------------------------------------------------------

* fixed mged "Pick Edit-Primitive" mouse selection bug - Bob Parker
* improved mged command console cut-and-paste support - Bob Parker
* fixed mged command input last character bug - Bob Parker
* improved gqa file support for blank/comment lines - Bob Parker
* fixed several SMP threading bugs in gqa command - Bob Parker
* added centroids and moments of inertia to gqa command - Bob Parker
* fixed mged 'prefix' command to write renamed objects - Bob Parker
* update usage of tops command in geometry browser - Cliff Yapp
* fix description of u option in bo command's man page - Cliff Yapp
* add tool for automatic coil creation using pipe - Cliff Yapp
* fixed bugs with external tool invocation in mged - Sean Morrison
* mged 'make' command no longer doubles the view size - Sean Morrison
* added -R no-resize option to mged e/B/draw commands - Sean Morrison
* mged 'tops' command -g and -u options are deprecated - Sean Morrison