@@ -1,11 +1,10 @@
 
-bin_SCRIPTS = awf brlman
+bin_SCRIPTS = brlman
 
 man_MANS = brlman.1
 EXTRA_DIST = \
 	$(man_MANS) \
 	$(bin_SCRIPTS) \
-	awf.in \
 	brlman.in
 
 include $(top_srcdir)/misc/Makefile.defs
